[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pywencai-enhanced"
version = "0.1.1"
description = "Enhanced fork of pywencai with stronger auth refresh, retries, and parsing."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "pywencai-enhanced contributors" },
]
keywords = ["iwencai", "wencai", "stocks", "finance", "dataframe"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial",
]
dependencies = [
  "pandas>=2.0.0",
  "requests>=2.30.0",
  "pydash>=8.0.0",
  "fake-useragent>=1.5.1",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.1",
  "twine>=5.0.0",
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pywencai = ["hexin-v.js", "hexin-v.bundle.js"]
